style.css
.logo-image {
    height: 100px;
    width: 100px;
    margin: 10px;
}

.logo-image-rumble {
    height: 25px;
    margin-left: 10px;
    margin-top: auto;
    margin-bottom: auto;
    padding-bottom: 5px;
    border-bottom: 1px solid red;
}

.title-wrapper {
    display: flex;
    position: absolute;
    top: 0;
    left: 0;
    background-color: black;
    color: white;
    width: 100%;
    box-shadow: 0px 2px 2px red;
}

.title-text {
    margin-left: 10px;
    margin-top: auto;
    margin-bottom: auto;
}

.content {
    margin-top: 130px;
}

body {
    background-color: lightgray;
}

